--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harshil Chovatiya's Blogs</title>
-    <link rel="shortcut icon" href="https://harshilchovatiya.github.io/imagesandroid-chrome-192x192.png
-    /" type="image/png">
+    <link rel="shortcut icon" href="https://harshilchovatiya.github.io/images/android-chrome-192x192.png"
+        type="image/png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
