--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div id="progressbar"></div>
-    <div id="scrollPath"></div>
+    <!-- <div id="progressbar"></div>
+    <div id="scrollPath"></div> -->
     <a href="#content" class="back-to-top">Top</a>
     <header class="header">
         <a href="#" class="logo">Harshil Chovatiya</a>
@@ -211,9 +211,6 @@
 
                                 </li>
                             </ul>
-                            <!-- <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-                            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-                            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a> -->
                         </div>
                     </div>
                 </div>
