--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="menu">
             <li><a href="#work">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#careers">Projects</a></li>
+            <li><a href="#./Pages/page.html">Projects</a></li>
             <li><a href="#contact">Team</a></li>
             <!-- <button type="button">Subscribe</button> -->
         </ul>
