--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-            <li><a href="#work">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="./Pages/about/about.html">About</a></li>
             <li><a href="./Pages/page.html">Projects</a></li>
-            <li><a href="#contact">Team</a></li>
+            <li><a href="#">Team</a></li>
             <!-- <button type="button">Subscribe</button> -->
         </ul>
     </header>
@@ -170,7 +170,7 @@
                 <h3>Harshil Chovatiya</h3>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Team</a></li>
